[package]
name = "qwenthinking"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9.0"
candle-nn = "0.9.0"
candle-transformers = "0.9.0"
tokenizers = "0.20.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
hf-hub = "0.3"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
